# singlepp

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  compare-SingleR.yaml  compare-r.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: BasicBuilder_8hpp.html  BasicBuilder_8hpp_source.html  BasicScorer_8hpp.html  BasicScorer_8hpp_source.html  ChooseClassicMarkers_8hpp.html  ChooseClassicMarkers_8hpp_source.html  Classifier_8hpp.html  Classifier_8hpp_source.html  Doxyfile  IntegratedBuilder_8hpp.html  IntegratedBuilder_8hpp_source.html  IntegratedScorer_8hpp.html  IntegratedScorer_8hpp_source.html  Intersection_8hpp.html  Intersection_8hpp_source.html  Markers_8hpp.html  Markers_8hpp__incl.map  Markers_8hpp__incl.md5  Markers_8hpp_source.html  SinglePP_8hpp.html  SinglePP_8hpp__incl.map  SinglePP_8hpp__incl.md5  SinglePP_8hpp_source.html  _formulas.tex  _formulas_dark.tex  annotated.html  choose__classic__markers_8hpp.html  choose__classic__markers_8hpp_source.html  classes.html  classify__integrated_8hpp.html  classify__integrated_8hpp_source.html  classify__single_8hpp.html  classify__single_8hpp_source.html  classsinglepp_1_1BasicBuilder-members.html  classsinglepp_1_1BasicBuilder.html  classsinglepp_1_1BasicScorer-members.html  classsinglepp_1_1BasicScorer.html  classsinglepp_1_1ChooseClassicMarkers-members.html  classsinglepp_1_1ChooseClassicMarkers.html  classsinglepp_1_1Classifier-members.html  (+95 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  (+45 more)
include/singlepp/: BasicBuilder.hpp  BasicScorer.hpp  ChooseClassicMarkers.hpp  ChooseMarkers.hpp  Classifier.hpp  IntegratedBuilder.hpp  IntegratedScorer.hpp  Integrator.hpp  Intersection.hpp  Markers.hpp  SinglePP.hpp  SubsetRemapper.hpp  SubsetSanitizer.hpp  annotate_cells.hpp  annotate_cells_integrated.hpp  annotate_cells_single.hpp  build_indices.hpp  build_reference.hpp  build_single.hpp  choose_classic_markers.hpp  classify_integrated.hpp  classify_single.hpp  compute_scores.hpp  correlations_to_score.hpp  defs.hpp  fill_labels_in_use.hpp  find_best_and_delta.hpp  fine_tune.hpp  intersect_features.hpp  l2.hpp  load_references.hpp  macros.hpp  process_features.hpp  recompute_scores.hpp  scaled_ranks.hpp  singlepp.hpp  subset_to_markers.hpp  train_integrated.hpp  train_single.hpp  utils.hpp
tests/: CMakeLists.txt
tests/R/: .gitignore  DESCRIPTION  NAMESPACE  build.sh  run.R  test.cpp
tests/R/R/: RcppExports.R  integrate.R  reference.R  single.R
tests/R/src/: INCLUDES  RcppExports.cpp  classify_integrate.cpp  classify_single.cpp  integrate.cpp  intersect_integrate.cpp  intersect_single.cpp  test.cpp  utils.cpp  utils.h
tests/R/tests/: testthat.R
tests/R/tests/testthat/: setup.R  test-integrate.R  test-overall.R  test-single.R
tests/src/: ChooseClassicMarkers.cpp  Classifier.cpp  IntegratedBuilder.cpp  IntegratedScorer.cpp  Integrator.cpp  Intersection.cpp  SinglePP.cpp  SubsetRemapper.cpp  SubsetSanitizer.cpp  annotate_cells_integrated.cpp  annotate_cells_single.cpp  build_reference.cpp  choose_classic_markers.cpp  classify_integrated.cpp  classify_single.cpp  compare.h  compute_scores.cpp  correlations_to_score.cpp  custom_parallel.h  fill_labels_in_use.cpp  fill_ranks.h  fine_tune.cpp  intersect_features.cpp  l2.cpp  load_references.cpp  mock_markers.h  naive_method.h  process_features.cpp  recompute_scores.cpp  scaled_ranks.cpp  spawn_matrix.h  subset_to_markers.cpp  utils.cpp
